--- a/find-dow-jones-dividend-trends-with-pythons-fastapi-and-yahoo-finance.html
+++ b/find-dow-jones-dividend-trends-with-pythons-fastapi-and-yahoo-finance.html
@@ -87,36 +87,58 @@
                         <img src="assets/imgs/dogs-of-dow.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This is an application build with one of the fastest Python web frameworks - FastAPI. </h5>
-                            <p><b>In fact, its speed is at par with Node.js and Go, it also creates plugins easily using dependency injection. The main function is to display current trend direction for 10 best high-yield dividend members of the Dow Jones Industrial Index included in Yahoo Finance's database. After receiving user input, application is gaining access to particular stock historical data by utilizing pandas-datareader. 
+                        <h5 class="blog-card-title">This is a high-performance web application built with FastAPI, one of the fastest Python web frameworks, known for its speed comparable to Node.js and Go.</h5>
+                            <p><b>The primary function of this application is to display the current trend direction for the top 10 high-yield dividend members of the Dow Jones Industrial Index, as included in Yahoo Finance's database. 
+                                After receiving user input, the application utilizes Pandas Datareader to access historical stock data, analyze trends, and provide recommendations. It presents analyzed data in an easy-to-understand format, helping users make informed investment decisions.
                         </b></p>
                         <a href="https://github.com/mjaroszewski1979/dogs_of_dow_v1" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
-                <h2>Features:</h2>
+                <h2>Key Features:</h2>
 
                 <table class="table table-borderless v-align-center">
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li><strong>CSS Flexbox</strong> simplifies complex layout structures by easily arranging and aligning items within a container. With its simplicity and compatibility with modern browsers, Flexbox is a popular tool for creating responsive layouts and reusable components, without the need for complicated CSS hacks.</li>
+                                <li><strong>FastAPI Framework</strong><br>
+                                    <br>
+                                    <p><b>Speed and Efficiency: </b>Built with FastAPI, ensuring high performance and speed comparable to Node.js and Go. FastAPI allows for rapid development and efficient execution.</p>
+                                    <p><b>Dependency Injection: </b>Facilitates the creation of plugins through an easy-to-use dependency injection system, enhancing modularity and scalability.</p>
+                                </li>
                                 <br>
-                                <li>To improve website performance, it's crucial to optimize loading times, which can be negatively affected by slow loading times and decreased search engine rankings. One way to improve performance is through <strong>HTML and CSS minification</strong>, a process that removes unnecessary characters from code to reduce file sizes, resulting in faster load times. </li>
+                                <li><strong>Data Validation and Conversion</strong><br>
+                                    <br>
+                                    <p><b>Path Operation Functions: </b>Ensures data integrity through well-defined request handlers, validating and converting data as necessary.</p>
+                                </li>
                                 <br>
-                                <li>With a wide range of options and the ability to customize the size, color, and animations, <strong>Font Awesome</strong> icons can enhance the look of your design and add functionality.</li>
+                                <li><strong>User Authentication</strong><br>
+                                    <br>
+                                    <p><b>HTTPBasicCredentials: </b>Implements a secure user authentication system using HTTPBasicCredentials to validate user credentials.</p>
+                                    <p><b>Password Hashing: </b>Utilizes Werkzeug Security for hashing passwords and verifying their correctness, enhancing security.</p>
+                                </li>
                                 <br>
-                                <li><strong>CSS variables</strong> allow you to set values that can be reused throughout your CSS file, making it easier to update the look and feel of your website or application. By incorporating CSS custom variables, you can create a flexible and efficient design that is easy to update.</li>
+                                <li><strong>Error Handling</strong><br>
+                                    <br>
+                                    <p><b>HTTPException: </b>Employs FastAPI’s HTTPException to handle errors effectively, providing meaningful feedback to users in case of incorrect credentials or other issues.</p>
+                                </li>
                                 <br>
-                                <li>Implementing <strong>Jinja2 extensible templating engine for automatic HTML escaping</strong> to prevent cross-site scripting (XSS) attacks.</li>
+                                <li><strong>Template Rendering</strong><br>
+                                    <br>
+                                    <p><b>Jinja2Templates: </b>Leverages Jinja2 for rendering dynamic HTML content, ensuring a seamless user experience with dynamic and responsive web pages.</p>
+                                </li>
                                 <br>
-                                <li><strong>Moving the fetching data function to a background thread</strong> to avoid unnecessary delays during request handling.</li>
+                                <li><strong>Performance Optimization:</strong><br>
+                                    <br>
+                                    <p><b>HTML and CSS Minification: </b>Reduces webpage loading times by minifying HTML and CSS files, enhancing overall performance and user experience.</p>
+                                    <p><b>Background Data Fetching:  </b>Moves data fetching operations to a background thread, avoiding delays and ensuring smooth performance.</p>
+                                </li>
                                 <br>
-                                <li>To handle password hashing and checking, <strong>Werkzeug Security</strong> offers a set of functions that can be used in a password-based authentication system.</li>
                             </ul>
                         </td>
                     </tbody>
 
                 </table>
+
 
                 
             </div><!-- end of container -->
