--- a/get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html
+++ b/get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html
@@ -87,41 +87,57 @@
                         <img src="assets/imgs/geo-api.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This project is built on the Django Rest Framework API platform and uses the JSON Web Token authentication mechanism to enable easy access to an IP geolocation database for Python applications. </h6>
-                            <p><b>By leveraging the power of the Django Rest Framework API and the convenience of JWT authentication, developers can quickly and easily create powerful applications that make use of IP geolocation data. 
-                                The Django Rest Framework API is a powerful tool for developers who want to create web APIs quickly and easily using the Django framework. With its built-in support for serialization, authentication, and validation, the Django Rest Framework API makes it easy for developers to create robust and secure APIs that can be used by a wide range of applications.
+                        <h5 class="blog-card-title">Geo API is a sophisticated web service built on the Django Rest Framework (DRF) API platform, specifically designed to provide seamless access to an IP geolocation database for Python applications.</h6>
+                            <p><b>By leveraging the capabilities of DRF and the security of JSON Web Token (JWT) authentication, developers can easily create powerful applications that utilize IP geolocation data. This project highlights the ease and efficiency of building robust and secure APIs using Django, with built-in support for serialization, authentication, and validation.
+                                It integrates WhiteNoise to serve static files efficiently. WhiteNoise caches files in memory and compresses them on the fly, with HTTPS support to ensure secure delivery.
                         </b></p>
                         <a href="https://github.com/mjaroszewski1979/geo_api_v1" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
-                <h2>Features:</h2>
+                <h2>Key Features:</h2>
 
                 <table class="table table-borderless v-align-center">
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li>With a wide range of customizable components and responsive design, <strong>Bulma</strong> makes it easy to create beautiful and functional web interfaces that work well on both desktop and mobile devices.</li>
+                                <li><strong>API Development</strong><br>
+                                    <br>
+                                    <p><b>Django Rest Framework: </b>Utilizes DRF to create a flexible and powerful API for accessing IP geolocation data. DRF's support for serialization, authentication, and validation ensures that the API is robust and secure.</p>
+                                    <p><b>Serialization: </b>Converts complex data types, such as querysets and model instances, into native Python data types that can then be easily rendered into JSON.</p>
+
+                                </li>
                                 <br>
-                                <li>This project has a strong and secure <strong>user authentication system</strong> that manages user accounts, cookies and sessions, and permissions, ensuring that users can access the resources they need while maintaining the security and integrity of the application.</li>
+                                <li><strong>User Authentication</strong><br>
+                                    <br>
+                                    <p><b>JSON Web Token (JWT) Authentication: </b>Implements JWT to manage user authentication securely. JWTs are used to exchange information between the client and server, ensuring that data cannot be altered once issued.</p>
+                                    <p><b>Secure User Management: </b>Manages user accounts, cookies, sessions, and permissions, ensuring users have appropriate access to resources while maintaining application security and integrity.</p>
+                                </li>
                                 <br>
-                                <li>Django's <strong>Cross-Site Request Forgery Protection</strong> works by using a unique token to validate each form submission on the server-side, and also includes other built-in security features like user authentication and authorization, password hashing, and SSL encryption to protect against common security threats.</li>
+                                <li><strong>Responsive Design</strong><br>
+                                    <br>
+                                    <p><b>Bulma CSS Framework: </b>Employs Bulma for creating responsive and aesthetically pleasing web interfaces that function well on both desktop and mobile devices. Bulma’s customizable components facilitate the development of beautiful and functional user interfaces.</p>
+                                </li>
                                 <br>
-                                <li>To serve static files with high performance and efficiency, you can use <strong>WhiteNoise</strong> - a Python library that caches files in memory, compresses them on the fly, and can be configured to use HTTPS.</li>
+                                <li><strong>Security Features</strong><br>
+                                    <br>
+                                    <p><b>CSRF Protection: </b>Django's built-in Cross-Site Request Forgery protection ensures secure form submissions, preventing malicious attacks.</p>
+                                    <p><b>Environment Variables: </b> Sensitive information such as API keys and database passwords are stored in environment variables, enhancing security.</p>
+                                </li>
                                 <br>
-                                <li><strong>JSON Web Token (JWT)</strong> is a widely used security mechanism that allows for the exchange of information between a client and server in a secure and reliable manner. It uses a cryptographic algorithm to sign sensitive data and ensures that it cannot be altered once it has been issued.</li>
+                                <li><strong>Code Organization and Performance</strong><br>
+                                    <br>
+                                    <p><b>Modular Design: </b>Logic is divided into smaller Django applications within the project, improving code organization, maintainability, and scalability.</p>
+                                    <p><b>Efficient Code Execution: </b>Most functionality is implemented in Django models or utility files rather than views, reducing loading and processing costs.</p>
+                                    <p><b>Optimized Testing: </b>Utilizes the setUp method for handling expensive setup operations, saving time and resources, and improving test reliability.</p>
+                                    <p><b>Page Object Pattern: </b>Follows the DRY principle, creating an interface between web page elements and tests to minimize code duplication and enhance test robustness.</p>
+                                </li>
                                 <br>
-                                <li><strong>Breaking down logic into smaller parts</strong>: to achieve improved code organization, maintainability, and scalability, while also making it easier to debug and test individual parts of the codebase I have created smaller, focused Django applications within the project.</li>
-                                <br>
-                                <li><strong>Writing most of the functionality in Django models or utility files instead of views</strong> to enhance application performance, as they are loaded only once when the application starts up, thus reducing loading and processing costs.</li>
-                                <br>
-                                <li>To ensure sensitive information is kept secure, we store API keys, database passwords, and other credentials in <strong>environment variables</strong>. </li>
-                                <br>
-                                <li><strong>The page object pattern</strong> follows the DRY principle, minimizing code duplication, and creates an interface between web page elements and tests, resulting in more robust tests and better test organization.</li>
                             </ul>
                         </td>
                     </tbody>
 
                 </table>
+
 
                 
             </div><!-- end of container -->
