--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Web Development</h5>
-                                <p class="font-weight-normal">Category: Django Applications</p>
+                                <p class="font-weight-normal">Category: Python Applications</p>
                             </span>                         
                         </span>                     
                     </a>
