--- a/master-software-testing-with-test-driven-development-and-selenium.html
+++ b/master-software-testing-with-test-driven-development-and-selenium.html
@@ -135,6 +135,19 @@
                     </div>
                 </div><!-- end of blog wrapper -->
 
+                <div class="blog-card">
+                    <div class="blog-card-header">
+                        <img src="assets/imgs/futuristic_map.png" class="blog-card-img" alt="futuristic motor bike rider jumping">
+                    </div>
+                    <div class="blog-card-body">
+                        <h5 class="blog-card-title">One of the cornerstones of effective testing is ensuring that all test cases are traceable back to the original requirements.</h6>
+                        <p><b>In every project, I incorporate comprehensive requirements documents that detail the specifications and expectations. These documents are directly linked to specific test cases, providing clear traceability and ensuring that every aspect of the requirements is covered. 
+                            This approach guarantees that each aspect of the project is tested and validated, leaving no room for ambiguities or overlooked details. Moreover, this practice enhances compliance with industry standards and regulatory requirements, as it provides documented evidence of thorough testing and validation processes.
+                        </b></p>
+                        <a href="https://github.com/mjaroszewski1979/global-macro-vercel" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Examples</button></a>
+                    </div>
+                </div><!-- end of blog wrapper -->
+
 
                
     
