--- a/technical-analysis-tools-for-s&p-500-python-flask-and-plotly.html
+++ b/technical-analysis-tools-for-s&p-500-python-flask-and-plotly.html
@@ -87,31 +87,49 @@
                         <img src="assets/imgs/market-bias.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This application is built on Python and Flask, and it leverages the power of Pandas and Plotly to provide historical data of the S&P 500.</h6>
-                            <p><b>To do this, it uses the Pandas Datareader to connect to the Yahoo Finance API and apply various technical analysis tools. One of the standout features of this application is its interactive visualizations, which are made possible by Plotly. Users can easily view market bias and explore different trends. In addition, the website also offers a simple and profitable trading strategy known as Dual Momentum. The application also includes a table of various stock indices, grouped by their one-year rate of change. This table is updated daily and uses historical data sourced from Yahoo Finance API.
+                        <h5 class="blog-card-title">Market Bias is a web application built on Python and Flask, designed to provide users with in-depth historical data and analysis of the S&P 500 index.</h6>
+                            <p><b>Leveraging the power of Pandas and Plotly, the application connects to the Yahoo Finance API via Pandas Datareader, applying various technical analysis tools to offer valuable insights. A standout feature is its interactive visualizations, which allow users to easily view market bias and explore different trends. Additionally, the application offers a simple yet profitable trading strategy known as Dual Momentum. 
+                                The website also includes a dynamically updated table of various stock indices, grouped by their one-year rate of change, sourced daily from the Yahoo Finance API.
                         </b></p>
                         <a href="https://github.com/mjaroszewski1979/market_bias_v2" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
-                <h2>Features:</h2>
+                <h2>Key Features:</h2>
 
                 <table class="table table-borderless v-align-center">
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li><strong>CSS Flexbox</strong> simplifies complex layout structures by easily arranging and aligning items within a container. With its simplicity and compatibility with modern browsers, Flexbox is a popular tool for creating responsive layouts and reusable components, without the need for complicated CSS hacks.</li>
+                                <li><strong>Data Retrieval and Analysis</strong><br>
+                                    <br>
+                                    <p><b>Yahoo Finance API Integration: </b>Utilizes Pandas Datareader to fetch historical data from Yahoo Finance. The data is then processed and analyzed using Pandas, offering various technical analysis tools to provide valuable insights into the S&P 500 index.</p>
+                                    <p><b>Daily Updates: </b>The application automatically updates a table of various stock indices, grouped by their one-year rate of change, ensuring users have access to the most recent data.</p>
+                                </li>
                                 <br>
-                                <li>To improve website performance, it's crucial to optimize loading times, which can be negatively affected by slow loading times and decreased search engine rankings. One way to improve performance is through <strong>HTML and CSS minification</strong>, a process that removes unnecessary characters from code to reduce file sizes, resulting in faster load times. </li>
+                                <li><strong>Interactive Visualizations</strong><br>
+                                    <br>
+                                    <p><b>Plotly Integration: </b>Implements Plotly to create interactive and visually appealing charts. Users can explore market trends, biases, and other technical indicators through dynamic visualizations.</p>
+                                </li>
                                 <br>
-                                <li>With a wide range of options and the ability to customize the size, color, and animations, <strong>Font Awesome</strong> icons can enhance the look of your design and add functionality.</li>
+                                <li><strong>Performance Optimization</strong><br>
+                                    <br>
+                                    <p><b>HTML and CSS Minification: </b>Optimizes loading times by minifying HTML and CSS files, removing unnecessary characters to reduce file sizes and improve website performance.</p>
+                                    <p><b>Background Email Sending: </b>Moves the email sending function to a background thread, significantly reducing delays during request handling and enhancing the overall user experience.</p>
+                                </li>
                                 <br>
-                                <li><strong>CSS variables</strong> allow you to set values that can be reused throughout your CSS file, making it easier to update the look and feel of your website or application. By incorporating CSS custom variables, you can create a flexible and efficient design that is easy to update.</li>
+                                <li><strong>Responsive and Modern Design</strong><br>
+                                    <br>
+                                    <p><b>CSS Flexbox: </b>Employs CSS Flexbox to simplify complex layout structures, making it easy to arrange and align items within a container. Flexbox's compatibility with modern browsers ensures a responsive and user-friendly design.</p>
+                                    <p><b>Font Awesome Icons: </b>Enhances the design and functionality with customizable icons from Font Awesome, allowing for a more engaging user interface.</p>
+                                </li>
                                 <br>
-                                <li>Optimizing the email sending function is crucial to ensure efficient and smooth running of your application. <strong>Moving the email sending function to a background thread</strong> can significantly reduce delays during request handling, improve overall performance, and enhance the user experience.</li>
+                                <li><strong>Security and Best Practices</strong><br>
+                                    <br>
+                                    <p><b>Environment Variables: </b>Stores sensitive information such as API keys and database passwords in environment variables to enhance security.</p>
+                                    <p><b>Flask Blueprints: </b>Uses Flask blueprints for modular organization of the application, improving code maintainability and scalability.</p>
+                                    <p><b>Application Factory Pattern: </b>Separates the creation of the application object from the rest of the codebase, allowing for easy configuration and management.</p>
+                                </li>
                                 <br>
-                                <li>To ensure sensitive information is kept secure, we store API keys, database passwords, and other credentials in <strong>environment variables</strong>.</li>
-                                <br>
-                                <li>Flask <strong>blueprints</strong> allow for modular organization of your application, while the <strong>application factory pattern</strong> separates the creation of the application object from the rest of your codebase, allowing for easy configuration and management.</li>
                             </ul>
                         </td>
                     </tbody>
