--- a/web_development.html
+++ b/web_development.html
@@ -99,9 +99,9 @@
                         <a href="experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html"><img src="assets/imgs/django-cars.png" class="blog-card-img" alt="Django Cars website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This Django application provides users the option to register and authenticate with their Google account.</h6>
-                        <p><b>Once successfully logged in, users can create a customized list of their favorite cars and even upload images of their choice. One of the most noteworthy features of this application is the implementation of drag-and-drop reordering, which enables users to dynamically alter the order of elements in their list, which is then automatically reflected in the database.
-                            he integration of HTMX technology into this Django application ensures that the user experience is smooth and seamless. HTMX is a modern tool that simplifies the development process by allowing developers to create interactive web pages with minimal effort.
+                        <h5 class="blog-card-title">This is a Django-based web application designed to provide users with a personalized and interactive experience in managing their favorite cars.</h6>
+                        <p><b>Upon visiting the application, users are offered the convenience of registering and authenticating through their Google accounts, thanks to the seamless integration of the django-allauth package. A highlight of MJ Cars is its dynamic list management capabilities. 
+                            Users can effortlessly reorder their list of favorite cars through an intuitive drag-and-drop interface. The application employs HTMX technology, a modern tool that significantly simplifies the development of highly interactive web pages. Project's documentation is automated using Sphinx-apidoc, which builds a well-organized module index with documentation links derived from docstrings.
                         </b></p>
                         <a href="experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
@@ -112,9 +112,9 @@
                         <a href="get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html"><img src="assets/imgs/geo-api.png" class="blog-card-img" alt="Geo API website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This project is built on the Django Rest Framework API platform and uses the JSON Web Token authentication mechanism to enable easy access to an IP geolocation database for Python applications. </h6>
-                        <p><b>By leveraging the power of the Django Rest Framework API and the convenience of JWT authentication, developers can quickly and easily create powerful applications that make use of IP geolocation data. 
-                            The Django Rest Framework API is a powerful tool for developers who want to create web APIs quickly and easily using the Django framework. With its built-in support for serialization, authentication, and validation, the Django Rest Framework API makes it easy for developers to create robust and secure APIs that can be used by a wide range of applications.
+                        <h5 class="blog-card-title">Geo API is a sophisticated web service built on the Django Rest Framework (DRF) API platform, specifically designed to provide seamless access to an IP geolocation database for Python applications.</h6>
+                        <p><b>By leveraging the capabilities of DRF and the security of JSON Web Token (JWT) authentication, developers can easily create powerful applications that utilize IP geolocation data. This project highlights the ease and efficiency of building robust and secure APIs using Django, with built-in support for serialization, authentication, and validation.
+                            It integrates WhiteNoise to serve static files efficiently. WhiteNoise caches files in memory and compresses them on the fly, with HTTPS support to ensure secure delivery.
                         </b></p>
                         <a href="get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
@@ -125,8 +125,9 @@
                         <a href="technical-analysis-tools-for-s&p-500-python-flask-and-plotly.html"><img src="assets/imgs/market-bias.png" class="blog-card-img" alt="market bias website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This application is built on Python and Flask, and it leverages the power of Pandas and Plotly to provide historical data of the S&P 500.</h6>
-                        <p><b>To do this, it uses the Pandas Datareader to connect to the Yahoo Finance API and apply various technical analysis tools. One of the standout features of this application is its interactive visualizations, which are made possible by Plotly. Users can easily view market bias and explore different trends. In addition, the website also offers a simple and profitable trading strategy known as Dual Momentum. The application also includes a table of various stock indices, grouped by their one-year rate of change. This table is updated daily and uses historical data sourced from Yahoo Finance API.
+                        <h5 class="blog-card-title">Market Bias is a web application built on Python and Flask, designed to provide users with in-depth historical data and analysis of the S&P 500 index.</h6>
+                        <p><b>Leveraging the power of Pandas and Plotly, the application connects to the Yahoo Finance API via Pandas Datareader, applying various technical analysis tools to offer valuable insights. A standout feature is its interactive visualizations, which allow users to easily view market bias and explore different trends. Additionally, the application offers a simple yet profitable trading strategy known as Dual Momentum. 
+                            The website also includes a dynamically updated table of various stock indices, grouped by their one-year rate of change, sourced daily from the Yahoo Finance API.
                         </b></p>
                         <a href="technical-analysis-tools-for-s&p-500-python-flask-and-plotly.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
@@ -137,9 +138,9 @@
                         <a href="find-dow-jones-dividend-trends-with-pythons-fastapi-and-yahoo-finance.html"><img src="assets/imgs/dogs-of-dow.png" class="blog-card-img" alt="dogs of dow website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This is an application build with one of the fastest Python web frameworks - FastAPI. </h6>
-                        <p><b>In fact, its speed is at par with Node.js and Go, it also creates plugins easily using dependency injection. The main function is to display current trend direction for 10 best high-yield dividend members of the Dow Jones Industrial Index included in Yahoo Finance's database. After receiving user input, application is gaining access to particular stock historical data by utilizing pandas-datareader. 
-                            For password hashing, we can use Werkzeug Security to define functions that handle password hashing and checking if a password is correct.
+                        <h5 class="blog-card-title">This is a high-performance web application built with FastAPI, one of the fastest Python web frameworks, known for its speed comparable to Node.js and Go. </h6>
+                        <p><b>The primary function of this application is to display the current trend direction for the top 10 high-yield dividend members of the Dow Jones Industrial Index, as included in Yahoo Finance's database. 
+                            After receiving user input, the application utilizes Pandas Datareader to access historical stock data, analyze trends, and provide recommendations. It presents analyzed data in an easy-to-understand format, helping users make informed investment decisions.
                         </b></p>
                         <a href="find-dow-jones-dividend-trends-with-pythons-fastapi-and-yahoo-finance.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
